# opto-py-client

./: .gitignore  Dockerfile  Makefile  pyproject.toml  readme.md
.github/workflows/: build.yml  deploy.yml
app/: __init__.py  main.py
app/routers/: hello.py
helm/: Chart.yaml  dev.yaml  values.yaml
helm/templates/: _helpers.tpl  _opto.tpl  deployment.yaml  hpa.yaml  iam.yaml  ingress.yaml  security_group.yaml  service.yaml  serviceaccount.yaml
