[tool.poetry]
name = "10thplanet"
version = "0.1.0"
description = "Better than Pluto"
authors = ["Your Name <you@example.com>"]
license = "proprietary"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.1"
gunicorn = "^20.1.0"
fastapi = "^0.75.1"
requests = "^2.27.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"

[tool.mypy]
# display settings;
color_output = true
error_summary = true
pretty = true
show_error_codes = true
show_error_context = true
# lint settings
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
